feature(education): add data and html files for education

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -49,10 +49,7 @@
     <!--EXPERIENCE-->
     {% include experience.html %}
     <!--EDUCATION-->
-    <div class="education position-relative overflow-hidden p-3 p-md-5  text-center ">
-        <div class="col-md-8 p-lg-5 mx-auto my-3">
-        </div>
-    </div>
+    {% include education.html %}
 
 
 
@@ -64,7 +61,7 @@
         <div class="row">
             <div class="col-12 col-md">
                 <img src="./assets/images/nallely_logo.png" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                <small class="d-block mb-3 text-muted">&copy; 2017-2018</small>
+                <small class="d-block mb-3 text-light">&copy; 2017-2018</small>
             </div>
 
         </div>
