--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -7,7 +7,7 @@
                 <p class="lead text-light">{{experience.dates}}</p>
             </div>
             <div class="col-lg-8 ">
-                <h3 class="font-weight-light"> {{experience.company}} &mdash;
+                <h3 class="font-weight-light"> {{experience.company}},
                     <span class="lead">{{experience.location}}</span>
                 </h3>
                 <p class="lead">
