--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -30,22 +30,9 @@
         </div>
     </nav>
 
-    <div class="name-div position-relative overflow-hidden text-center">
-        <div class="overlay p-3 p-md-5 ">
-            <div class="col-md-4 mx-auto ">
-                <img class="avatar" src="./assets/images/nallely.jpg">
-            </div>
-            <div class="col-md-6  mx-auto">
-                <h1 class="display-4">Nallely Alcaraz</h1>
-                <h2 class="font-weight-light">Web Developer</p>
-            </div>
-        </div>
-    </div>
+    {% include nallely.html %}
     <!--ABOUT ME-->
-    <div class="about-me position-relative overflow-hidden p-3 p-md-5  text-center ">
-        <div class="col-md-8 p-lg-5 mx-auto my-3">
-        </div>
-    </div>
+    {% include about-me.html %}
     <!--EXPERIENCE-->
     {% include experience.html %}
     <!--EDUCATION-->
