feature(skills): add skills in _include and _data

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -37,6 +37,8 @@
     {% include experience.html %}
     <!--EDUCATION-->
     {% include education.html %}
+    <!--SKILLS-->
+    {% include skills.html %}
 
 
 
