--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -1,8 +1,8 @@
 <div class="about-me position-relative overflow-hidden p-3 p-md-5  text-center ">
     <div class="col-md-8 p-lg-5 mx-auto my-3">
         <p class="lead">Originally from the Inland Empire, as a recent Computer Engineering graduate I was brought to the Coachella Valley
-            to begin a career in Web Development. I now have over three years experience building, optimizing, and maintaining
-            web applications.
+            to begin a career in Web Development. Now, with over three years experience I have developed the skills necessary
+            to build, maintain , and optimize web applications.
         </p>
     </div>
 </div>
