--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: url("../images/trees.jpg") no-repeat center center fixed;
+  background: url("../images/trees.JPG") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
