--- a/_includes/nallely.html
+++ b/_includes/nallely.html
@@ -1,9 +1,9 @@
 <div class="name-div position-relative overflow-hidden text-center">
     <div class="overlay p-3 p-md-5 ">
-        <div class="col-md-4 mx-auto ">
+        <div class="col-md-4 mx-auto py-4 ">
             <img class="avatar" src="./assets/images/nallely.jpg">
         </div>
-        <div class="col-md-6  mx-auto">
+        <div class="col-md-6  mx-auto py-4">
             <h1 class="display-3">Nallely Alcaraz</h1>
             <h1 class="font-weight-light">Web Developer</p>
         </div>
