refactor: remove transparency from header

--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-12 col-md">
                 <img src="./assets/images/nallely_logo.png" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                <small class="d-block mb-3 text-light">&copy; 2018</small>
+                <small class="d-block mb-3 text-dark">&copy; 2018</small>
             </div>
 
         </div>
