refactor: resize images
Resize all images for faster load time

Remove transparency in nav bar.

--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-lg-8 offset-lg-4">
                 {% for responsibility in experience.responsibilities %}
-                <p class="lead">&#9702;{{responsibility}}</p>
+                <p class="lead">&#9702; &nbsp; {{responsibility}}</p>
                 {% endfor %}
             </div>
         </div>
