--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Web Developer based in the Coachella Valley specializing in AngularJS">
+<meta name="keywords" content="web developer, computer Engineering, front-end">
     <link rel="icon" href="./assets/images/nallely_logo.png">
 
     <title>Nallely Alcaraz</title>
