--- a/_includes/nallely.html
+++ b/_includes/nallely.html
@@ -1,7 +1,7 @@
 <div class="name-div position-relative overflow-hidden text-center">
     <div class="overlay p-3 p-md-5 ">
         <div class="col-md-4 mx-auto py-4 ">
-            <img class="avatar" src="./assets/images/nallely.jpg">
+            <img class="avatar" src="./assets/images/nallely.jpg" alt="nallely">
         </div>
         <div class="col-md-6  mx-auto py-4">
             <h1 class="display-3">Nallely Alcaraz</h1>
