feat: contact form

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,9 +1,9 @@
 <nav class=" site-header navbar sticky-top navbar-expand-md navbar-light">
     <a class="navbar-brand visible-xs home-link py-2 d-inline-flex" href="/">
-        <img src="./assets/images/nallely_logo.png" width="24" height="24" viewBox="0 0 24 24">
+        <img src="./assets/images/nallely_logo.png" width="24" height="24" alt="logo" viewBox="0 0 24 24">
         <span> allely Alcaraz</span>
     </a>
-    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menuOptions" aria-controls="menuOptions"
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menuOptions" aria-controls="menuOptions"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,7 +20,7 @@
             </li>
         </ul>
 
-    </div> -->
+    </div>
 </nav>
 <!-- <nav class="site-header sticky-top py-1">
         <div class="container d-flex flex-column flex-md-row justify-content-between">
