--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Web Developer based in the Coachella Valley specializing in AngularJS">
-<meta name="keywords" content="web developer, computer Engineering, front-end">
+    <meta name="keywords" content="nallely alcaraz, nallely, alcaraz, web developer, computer Engineering, front-end">
     <link rel="icon" href="./assets/images/nallely_logo.png">
 
     <title>Nallely Alcaraz</title>
@@ -20,29 +20,17 @@
 
 </head>
 
+
+
 <body>
-
-
-    {% include nav.html %} {% include nallely.html %}
-    <!--ABOUT ME-->
-    {% include about-me.html %}
-    <!--EXPERIENCE-->
-    {% include experience.html %}
-    <!--EDUCATION-->
-    {% include education.html %}
-    <!--SKILLS-->
-    {% include skills.html %}
-
-
-
-
-
-
-
+    {% include nav.html %}
+    <main c id="content" role="main">
+        {{content}}
+    </main>
     <footer class="site-footer px-4 py-2">
         <div class="row">
             <div class="col-12 col-md">
-                <img src="./assets/images/nallely_logo.png" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <img src="./assets/images/nallely_logo.png" width="24" height="24" alt="logo" viewBox="0 0 24 24" fill="none">
                 <small class="d-block mb-3 text-dark">&copy; 2018</small>
             </div>
 
