refactor(skills): add icons to skills
Add font-awesome library

Add cdns for devicon library

Change skills section to display icons only

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -3,10 +3,12 @@
         <h2 class="font-weight-light">SKILLS</h2>
         {% for skill in site.data.skills %}
 
-        <ul class="list-group list-group-flush">
-            <li class="pt-1 pb-1 list-group-item">{{skill.name}}</li>
+        <!-- <ul class="list-group list-group-flush">
+            <li class="pt-1 pb-1 list-group-item"> -->
+                <i class="{{skill.iconClass}}"></i>
+              <!-- </li>
 
-        </ul>
+        </ul> -->
         {% endfor %}
 
     </div>
