refactor(contact): disable send button

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,15 +1,15 @@
-<nav class=" site-header navbar sticky-top navbar-expand-md navbar-light">
+<nav class=" site-header navbar  navbar-expand-md navbar-light">
     <a class="navbar-brand visible-xs home-link py-2 d-inline-flex" href="/">
-        <img src="./assets/images/nallely_logo.png" width="24" height="24" alt="logo" viewBox="0 0 24 24">
+        <img alt="N" src="./assets/images/nallely_logo.png" width="24" height="24" alt="logo" viewBox="0 0 24 24">
         <span> allely Alcaraz</span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menuOptions" aria-controls="menuOptions"
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse text-right" id="menuOptions">
+    <div class="collapse navbar-collapse text-right" id="navbar">
 
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
                 <a class="nav-link" href="/">Home
                     <span class="sr-only">(current)</span>
@@ -22,12 +22,3 @@
 
     </div>
 </nav>
-<!-- <nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="home-link py-2 d-inline-flex" href="#">
-                <img src="./assets/images/nallely_logo.png" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                <span> allely Alcaraz</span>
-            </a>
-
-        </div>
-    </nav> -->
