--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -40,7 +40,7 @@
     <footer class="site-footer px-4 py-2">
         <div class="row">
             <div class="col-12 col-md">
-                <img src="./assets/images/nallely_logo.png" width="24" height="24" alt="logo" viewBox="0 0 24 24" fill="none">
+                <img alt="N" src="./assets/images/nallely_logo.png" width="24" height="24" alt="logo" viewBox="0 0 24 24" fill="none">
                 <small class="d-block mb-3 text-dark">&copy; 2018</small>
             </div>
 
@@ -51,8 +51,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="./assets/vendors/bootstrap/js/bootstrap.js"></script>
+    <script src="/main.js">S</script>
+ 
 
 
 </body>
