refactor(skills): add relevant skills

--- a/_includes/about-me.html
+++ b/_includes/about-me.html
@@ -1,7 +1,7 @@
 <div class="about-me position-relative overflow-hidden p-3 p-md-5  text-center ">
     <div class="col-md-8 p-lg-5 mx-auto my-3">
         <p class="lead">Originally from the Inland Empire, as a recent Computer Engineering graduate I was brought to the Coachella Valley
-            to begin a career in Web Development. Now, with over three years experience I have developed the skills necessary
+            to begin a career in Web Development. Now, with over four years experience I have developed the skills necessary
             to build, maintain , and optimize web applications.
         </p>
     </div>
