--- a/_includes/nallely.html
+++ b/_includes/nallely.html
@@ -5,7 +5,7 @@
         </div>
         <div class="col-md-6  mx-auto py-4">
             <h1 class="display-3">Nallely Alcaraz</h1>
-            <h1 class="font-weight-light">Web Developer</p>
+            <h1 class="font-weight-light">Web Applications Developer</p>
         </div>
     </div>
 </div>
