--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -90,6 +90,11 @@ body::-webkit-scrollbar-thumb {
   background-color: transparent;
 }
 
+.skill-icon{
+  margin-left: 8px;
+  margin-right: 8px;
+}
+
 .avatar {
   height: 20rem;
   border-radius: 50%;
